# stock_analyser

./: .gitignore  Git commands.md  README.md  data.ipynb  eda.ipynb  pyproject.toml  requirements.txt  test_plot.py
Project Description/: AI_Stock_Sentiment_Project_Roadmap.md  Resume_Analyzer_Project_Plan.md
src/backend/: data.ipynb  data_analysis.py  data_handeling.py  data_processing.py  db_setup.py  general.py  main.py  recommendation.py
src/backend/models/: logistic_regression_model.pkl  random_forest_model.pkl  xgboost_model.pkl
src/frontend/: frontend.py  stock_analyser_togglebar_design_spec.md
stock/: data.ipynb  general.py  sentiment.py
