[project]
name = "stock-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gnews>=0.4.1",
    "ipykernel>=6.29.5",
    "krazy>=0.22.48",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "plotly>=6.1.2",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "psycopg2>=2.9.10",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "vadersentiment>=3.3.2",
    "yfinance>=0.2.63",
]
